--- a/style.css
+++ b/style.css
@@ -72,7 +72,9 @@ legend,
 .anime-name,
 .character-name,
 .opening-name,
-.opening-anime {
+.opening-anime,
+.ending-name,
+.ending-anime {
   text-shadow:
     .4vw .4vw .4vw var(--color-primary-dark),
     -1px -1px 0 var(--color-primary-dark),
@@ -179,7 +181,8 @@ p {
 
 .favorite-anime,
 .favorite-characters,
-.favorite-openings {
+.favorite-openings,
+.favorite-endings {
   position: relative;
 }
 
@@ -196,7 +199,8 @@ p {
 
 .animes-row,
 .characters-row,
-.openings-row {
+.openings-row,
+.endings-row {
   padding: 0 4vw 0;
   display: flex;
   align-items: center;
@@ -224,7 +228,8 @@ p {
 
 .anime-name,
 .character-name,
-.opening-anime {
+.opening-anime,
+.ending-anime {
   position: relative;
   display: flex;
   justify-content: center;
@@ -265,18 +270,21 @@ p {
   margin: 0 auto;
 }
 
-.top-10-openings {
+.top-10-openings,
+.top-10-endings {
   padding: 4vw 0 6vw;
   position: relative;
   z-index: 1;
 }
 
-.opening {
+.opening,
+.ending {
   width: 44vw;
   height: 30vw;
 }
 
-.opening-image {
+.opening-image,
+.ending-image {
   width: 42vw;
   height: 22vw;
   border: 1vw solid var(--color-primary-dark);
@@ -290,7 +298,8 @@ p {
   margin: 0 auto;
 }
 
-.opening-name {
+.opening-name,
+.ending-name {
   position: relative;
   display: flex;
   justify-content: center;
