--- a/style.css
+++ b/style.css
@@ -191,8 +191,11 @@ p {
   top: -15vw;
 }
 
-.top-10-animes {
-  padding: 2vw 0 6vw;
+.top-10-animes,
+.top-10-characters,
+.top-10-openings,
+.top-10-endings {
+  padding: 4vw 0 8vw;
   position: relative;
   z-index: 1;
 }
@@ -245,12 +248,6 @@ p {
   font-family: var(--font-primary);
 }
 
-.top-10-characters {
-  padding: 2vw 0 6vw;
-  position: relative;
-  z-index: 1;
-}
-
 .character {
   width: 18vw;
   height: 20vw;
@@ -268,13 +265,6 @@ p {
   background-size: cover;
 
   margin: 0 auto;
-}
-
-.top-10-openings,
-.top-10-endings {
-  padding: 4vw 0 6vw;
-  position: relative;
-  z-index: 1;
 }
 
 .opening,
