--- a/style.css
+++ b/style.css
@@ -142,9 +142,7 @@ p {
   z-index: 1;
 }
 
-.instagram,
-.league,
-.genshin {
+.social-item {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -154,15 +152,10 @@ p {
   font-family: var(--font-links);
 }
 
-.instagram .icon,
-.league .icon,
-.genshin .icon {
+.social-item .icon {
   width: 4vw;
   height: 4vw;
   margin-right: 1vw;
-}
-
-.genshin .icon {
   border-radius: .8vw;
 }
 
