refactor: change add-edit-more & content-status class to hide

--- a/public/anime-list-style.css
+++ b/public/anime-list-style.css
@@ -213,6 +213,11 @@ tbody[class*="list-item"]:hover,
 	border-bottom: transparent 0 solid;
 }
 
+.add-edit-more,
+.content-status {
+	display: none;
+}
+
 
 /*FOOTER*/
 
